@@ -597,6 +597,12 @@ fi
 AC_SUBST(SNDFILE_CFLAGS)
 AC_SUBST(SNDFILE_LIBS)
 
+# Check for Vorbis support in libsndfile
+linuxsampler_save_CFLAGS=$CFLAGS
+CFLAGS="$SNDFILE_CFLAGS $CFLAGS"
+AC_CHECK_DECLS([SF_FORMAT_VORBIS], [], [] ,[[#include <sndfile.h>]])
+CFLAGS=$linuxsampler_save_CFLAGS
+
 # Instruments DB feature (requires SQLite 3.3)
 AC_ARG_ENABLE(instruments-db,
   [  --disable-instruments-db
